--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "devtools": "pnpm vue-devtools",
     "ts-check": "vue-tsc --noEmit",
     "preview": "vite preview",
-    "check": "cd src-tauri && cargo check"
+    "check": "cd src-tauri && cargo check",
+    "updater": "node scripts/updater.mjs"
   },
   "dependencies": {
     "@tauri-apps/api": "1.2.0",
@@ -25,6 +26,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@actions/github": "^5.1.1",
     "@tauri-apps/cli": "1.2.2",
     "@types/node": "18.11.18",
     "@vitejs/plugin-vue": "4.0.0",
@@ -37,6 +39,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-security": "1.5.0",
     "eslint-plugin-vue": "9.8.0",
+    "node-fetch": "^3.3.0",
     "postcss": "8.4.20",
     "postcss-import": "15.1.0",
     "postcss-nesting": "10.2.0",
