--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.2.1", features = [] }
 [dependencies]
 serde_json = "1.0.91"
 serde = { version = "1.0.152", features = ["derive"] }
-tauri = { version = "1.2.3", features = ["api-all", "macos-private-api", "system-tray"] }
+tauri = { version = "1.2.3", features = ["api-all", "macos-private-api", "system-tray", "updater"] }
 window-vibrancy = "0.3.2"
 log = "0.4.17"
 env_logger = "0.10.0"
