--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@actions/github": "^5.1.1",
     "@tauri-apps/cli": "1.2.2",
+    "@tauri-release/cli": "^0.2.3",
     "@types/node": "18.11.18",
     "@vitejs/plugin-vue": "4.0.0",
     "@vue/devtools": "6.4.5",
