--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "email": "2720851545@qq.com"
   },
   "scripts": {
-    "dev": "RUST_BACKTRACE=1;RUST_LOG=debug concurrently -k \"tauri dev\" \"pnpm devtools\"",
+    "dev": "concurrently -k \"cross-env RUST_BACKTRACE=1 RUST_LOG=debug tauri dev\" \"pnpm devtools\"",
     "build": "tauri build",
     "vite:dev": "vite dev",
     "vite:build": "vite build",
@@ -35,6 +35,7 @@
     "@vue/eslint-config-typescript": "11.0.2",
     "autoprefixer": "10.4.13",
     "concurrently": "7.6.0",
+    "cross-env": "^7.0.3",
     "eslint": "8.31.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-node": "11.1.0",
