--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "vite": "4.0.4",
     "vite-plugin-inspect": "^0.7.14",
     "vite-plugin-pages": "^0.28.0",
+    "vite-plugin-top-level-await": "^1.2.4",
     "vitest": "0.26.3",
     "vue-tsc": "1.0.22"
   }
