--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,24 +61,24 @@ jobs:
           releaseDraft: true
           prerelease: false
 
-  # 生成静态资源并将其推送到 github pages
-  updater:
-    runs-on: ubuntu-latest
-    needs: [publish]
+  # # 生成静态资源并将其推送到 github pages
+  # updater:
+  #   runs-on: ubuntu-latest
+  #   needs: [publish]
 
-    steps:
-      - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2.2.1
-        with:
-          version: 7
-          run_install: true
-      - run: pnpm updater
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: pnpm/action-setup@v2.2.1
+  #       with:
+  #         version: 7
+  #         run_install: true
+  #     - run: pnpm updater
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Deploy install.json
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./updater
-          force_orphan: true
+  #     - name: Deploy install.json
+  #       uses: peaceiris/actions-gh-pages@v3
+  #       with:
+  #         github_token: ${{ secrets.GITHUB_TOKEN }}
+  #         publish_dir: ./updater
+  #         force_orphan: true
