--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -52,3 +52,6 @@ jobs:
 
       - name: Build Vite + Tauri
         run: pnpm build
+        env:
+          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
+          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
